[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandlet-tf3d"
version = "0.1.0"
description = "GPU-native 3D directional tight-frame bandlet-like transform for PyTorch"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Angshul Majumdar"}]
keywords = ["pytorch", "3d", "wavelets", "transform", "volumetric", "cuda"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["bandlet_tf3d*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
